--- a/package.json
+++ b/package.json
@@ -1,19 +1,19 @@
 {
-  "name": "nodebasics",
+  "name": "nodejs-complete-guide",
   "version": "1.0.0",
-  "description": "Complete Node js guide",
+  "description": "Complete Node.js Guide",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon app.js",
     "start-server": "node app.js"
   },
-  "author": "",
+  "author": "Maximilian Schwarzmüller",
   "license": "ISC",
   "devDependencies": {
-    "nodemon": "^2.0.12"
+    "nodemon": "^1.18.3"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.16.3"
   }
 }
