--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "nodemon": "^1.18.3"
   },
   "dependencies": {
-    "express": "^4.16.3"
+    "body-parser": "^1.19.0",
+    "express": "^4.16.3",
+    "save": "^2.4.0"
   }
 }
